# teklo-foundry

./: Cargo.toml  LICENSE  README.md
bins/teklo-foundry-web/: Cargo.toml  Dioxus.toml
bins/teklo-foundry-web/assets/: main.css
bins/teklo-foundry-web/src/: main.rs
